Fixed bug #40757 (get_object_vars get nothing in child class) Fixed bug #41929 (Foreach on object does not iterate over all visible properties)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@240261 c90b9560-bf6c-de11-be94-00142212c4b1