Zend/tests/bug27798.phpt
@@ -49,12 +49,12 @@ array(1) {
 }
 Base::__construct
 array(3) {
-  ["Baz"]=>
-  int(4)
   ["Foo"]=>
   int(1)
   ["Bar"]=>
   int(2)
+  ["Baz"]=>
+  int(3)
 }
 Child::__construct
 array(3) {
@@ -86,12 +86,12 @@ array(1) {
 }
 Base::__construct
 array(3) {
-  [u"Baz"]=>
-  int(4)
   [u"Foo"]=>
   int(1)
   [u"Bar"]=>
   int(2)
+  [u"Baz"]=>
+  int(3)
 }
 Child::__construct
 array(3) {
